--- a/词汇/english/src/main/resources/application.yml
+++ b/词汇/english/src/main/resources/application.yml
@@ -45,6 +45,6 @@ pagehelper:
   params: count=countsql
 server:
   port: 8082
-logging:
-  config: classpath:logback-boot.xml
+#logging:
+#  config: classpath:logback-boot.xml
 randNum: 2000
